tests/functional/lang/eval-fail/abs-path-fatal.err.exp
error: absolute path literals are not portable. Consider replacing path literal '/tmp/foo' by a string, relative path, or parameter (lint-absolute-path-literals)
       at /pwd/lang/eval-fail/abs-path-fatal.nix:1:1:
            1| /tmp/foo
             | ^
            2|
